--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://example.com">
+    <meta http-equiv="refresh" content="0; url=https://www.restaurant-pattaya.at/uploads/ARBDERmn/SpeisekarteEnglisch.pdf">
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>If you're not redirected, <a href="https://example.com">click here</a>.</p>
+    <p>If you're not redirected, <a href="https://www.restaurant-pattaya.at/uploads/ARBDERmn/SpeisekarteEnglisch.pdf">click here</a>.</p>
   </body>
 </html>
